deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: face-reg
  labels:
    name: face-reg
